load("@rules_cc//cc:defs.bzl", "cc_library")

_private_hdrs = [
    "include/boost/circular_buffer/details.hpp",
]

cc_library(
    name = "circular_buffer_internal",
    hdrs = _private_hdrs,
    deps = [
        "@boost//libs/throw_exception",
        "@boost//libs/core",
        "@boost//libs/move",
        "@boost//libs/type_traits",
    ],
)

cc_library(
    name = "circular_buffer",
    visibility = ["//visibility:public"],
    includes = ["include"],
    hdrs = glob(["include/boost/**/*.hpp"], exclude = _private_hdrs),
    deps = [":circular_buffer_internal"],
)

# These platforms are only for the CI. You must define your own platforms for
# your project
platform(
    name = "ci_windows",
    constraint_values = [
        "@com_github_bazelboost_thread//:threadapi_win32",
        "@platforms//cpu:x86_64",
        "@platforms//os:windows",
        "@bazel_tools//tools/cpp:msvc",
    ],
)

platform(
    name = "ci_linux",
    constraint_values = [
        "@com_github_bazelboost_thread//:threadapi_pthread",
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
        "@bazel_tools//tools/cpp:gcc",
    ],
)
